# onboard

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
onboard/: __init__.py  analyzer.py  cli.py  config.py  engine.py  git_analyzer.py  pipeline.py  qa.py  scanner.py
onboard/outputs/: __init__.py  guide.py
