[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onboard"
version = "0.1.0"
description = "Codebase onboarding agent — point at any repo, get a comprehensive guide in 5 minutes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jaxz714" }]
keywords = ["onboarding", "codebase", "analysis", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.30",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
onboard = "onboard.cli:cli"

[project.urls]
Homepage = "https://github.com/Jaxz714/onboard"
Repository = "https://github.com/Jaxz714/onboard"

[tool.hatch.build.targets.wheel]
packages = ["onboard"]
